[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Tiger/tigre1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tiger/Tiger.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=2]
radius = 29.0
height = 0.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 29.0
height = 0.0

[node name="Tiger" type="KinematicBody2D" groups=["tigers"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1.19209e-07 )
scale = Vector2( 0.0397786, 0.040162 )
frames = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="move_timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
